--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -27,7 +27,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline' *; media-src * blob:;">
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src * 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline' *; media-src * blob:;">-->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -46,9 +46,14 @@
 
     <div>
         <div ui-view></div>
+        
+<!--        AIzaSyBtWj73qxDVXMJxB02KwlPx80sAQX-QFF0	-->
+
     </div>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtWj73qxDVXMJxB02KwlPx80sAQX-QFF0"></script> 
     <script src="components/CryptoJS/rollups/md5.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/XHR.js"></script>
     <script type="text/javascript" src="app.js"></script>
 
 </body>
